--- a/RapidRecruit/Views/Shared/_Layout.cshtml
+++ b/RapidRecruit/Views/Shared/_Layout.cshtml
@@ -19,15 +19,12 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="JobPostings" asp-action="Index">Job Postings</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated && User.Claims.Any(c => c.Type == "AccountType" && c.Value == "Business"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="JobPostings" asp-action="Index">Job Postings</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
