--- a/RapidRecruit/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/RapidRecruit/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -15,6 +15,15 @@
                 <input asp-for="Username" class="form-control" placeholder="Please choose your username." disabled />
                 <label asp-for="Username" class="form-label"></label>
             </div>
+            @if (User.Claims.Any(c => c.Type == "AccountType" && c.Value == "Business"))
+            {
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.BusinessName" class="form-control" placeholder="Please enter the name of your Business." />
+                    <label asp-for="Input.BusinessName" class="form-label"></label>
+                    <span asp-validation-for="Input.BusinessName" class="text-danger"></span>
+
+                </div>
+            }
             <div class="form-floating mb-3">
                 <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number."/>
                 <label asp-for="Input.PhoneNumber" class="form-label"></label>
