--- a/RapidRecruit/Views/Home/Index.cshtml
+++ b/RapidRecruit/Views/Home/Index.cshtml
@@ -12,6 +12,9 @@
                     @Html.DisplayNameFor(model => model.Title)
                 </th>
                 <th>
+                    Company
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.Description)
                 </th>
                 <th>
@@ -29,6 +32,7 @@
                 <th>
                     @Html.DisplayNameFor(model => model.CreatedAt)
                 </th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -38,6 +42,9 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.Title)
                     </td>
+                    <th>
+                        @Html.DisplayFor(modelItem => item.User.BusinessName)
+                    </th>
                     <td>
                         @Html.DisplayFor(modelItem => item.Description)
                     </td>
