--- a/RapidRecruit/Views/Shared/_LoginPartial.cshtml
+++ b/RapidRecruit/Views/Shared/_LoginPartial.cshtml
@@ -1,28 +1,27 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using RapidRecruit.Models
-
 @inject SignInManager<UserAccount> SignInManager
 @inject UserManager<UserAccount> UserManager
 
-<ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-    </li>
-    <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
+<ul class="flex items-center space-x-4">
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <li>
+            <a id="manage" class="inline-block px-4 py-2 text-gray-900 hover:text-gray-700" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+        </li>
+        <li>
+            <form id="logoutForm" class="inline-flex" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button id="logout" type="submit" class="px-4 py-2 text-gray-900 hover:text-gray-700 bg-transparent border-none cursor-pointer">Logout</button>
+            </form>
+        </li>
+    }
+    else
+    {
+        <li>
+            <a class="inline-block px-4 py-2 text-gray-900 hover:text-gray-700" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        </li>
+        <li>
+            <a class="inline-block px-4 py-2 text-gray-900 hover:text-gray-700" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        </li>
+    }
 </ul>
