--- a/RapidRecruit/Areas/Identity/Pages/Account/Manage/_StatusMessage.cshtml
+++ b/RapidRecruit/Areas/Identity/Pages/Account/Manage/_StatusMessage.cshtml
@@ -1,10 +1,41 @@
 ﻿@model string
-
 @if (!String.IsNullOrEmpty(Model))
 {
-    var statusMessageClass = Model.StartsWith("Error") ? "danger" : "success";
-    <div class="alert alert-@statusMessageClass alert-dismissible" role="alert">
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        @Model
-    </div>
+   var statusMessageClass = Model.StartsWith("Error") ? "red" : "green";
+   <div class="rounded-md p-4 mb-4 @(statusMessageClass == "red" ? "bg-red-50" : "bg-green-50")" role="alert">
+       <div class="flex">
+           <div class="flex-shrink-0">
+               @if (statusMessageClass == "red")
+               {
+                   <svg class="h-5 w-5 text-red-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                       <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
+                   </svg>
+               }
+               else
+               {
+                   <svg class="h-5 w-5 text-green-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                       <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                   </svg>
+               }
+           </div>
+           <div class="ml-3">
+               <p class="text-sm font-medium @(statusMessageClass == "red" ? "text-red-800" : "text-green-800")">
+                   @Model
+               </p>
+           </div>
+           <div class="ml-auto pl-3">
+               <div class="-mx-1.5 -my-1.5">
+                   <button type="button" 
+                           data-bs-dismiss="alert"
+                           class="inline-flex rounded-md p-1.5 @(statusMessageClass == "red" ? "bg-red-50 text-red-500 hover:bg-red-100" : "bg-green-50 text-green-500 hover:bg-green-100") focus:outline-none focus:ring-2 focus:ring-offset-2 @(statusMessageClass == "red" ? "focus:ring-red-600" : "focus:ring-green-600")"
+                           aria-label="Dismiss">
+                       <span class="sr-only">Dismiss</span>
+                       <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                           <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
+                       </svg>
+                   </button>
+               </div>
+           </div>
+       </div>
+   </div>
 }
