--- a/RapidRecruit/Views/Shared/_Layout.cshtml
+++ b/RapidRecruit/Views/Shared/_Layout.cshtml
@@ -63,6 +63,7 @@
     </footer>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script>
         // Mobile menu toggle
         document.querySelector('[aria-controls="mobile-menu"]').addEventListener('click', function() {
